# jdresumewritercrewai

./: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  convert_all_to_html.py  convert_to_html.py  convert_to_pdf.py  convert_to_pdf.sh  pyproject.toml  resume.html  resume.md  sample_candidate_profile.json  ~$resume.html
input/: sample_candidate_profile.json
knowledge/: company_name.txt  job_description.txt  job_url.txt  user_preference.txt
output/: candidate_profile_analysis.md  company_intelligence.md  cover_letter.md  interview_prep_guide.md  linkedin_messages.md  proposed_job_analysis.md  resume_content.md  skills_gap_analysis.md  skills_matching_report.md
src/jdresumewritercrewai/: README.md  crew.py  main.py
src/jdresumewritercrewai/config/: agents.yaml  tasks.yaml
src/jdresumewritercrewai/tools/: __init__.py  file_reader.py  profile_parser.py  web_scraper.py
