[project]
name = "jdresumewritercrewai"
version = "0.1.0"
description = "jdresumewritercrewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0"
]

[project.scripts]
jdresumewritercrewai = "jdresumewritercrewai.main:run"
run_crew = "jdresumewritercrewai.main:run"
train = "jdresumewritercrewai.main:train"
replay = "jdresumewritercrewai.main:replay"
test = "jdresumewritercrewai.main:test"
run_with_trigger = "jdresumewritercrewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
